[package]
name = "ceolmund"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "^0.32.1"
image = "^0.24.5"
rand = "^0.8.5"
futures = "^0.3.25"
tokio = { version = "^1.23.0", features = ["full"] }
noop-waker = "^0.1.0"
noise = "^0.8.2"
rusty-xinput = "^1.2.0"
unicode-segmentation = "^1.10.0"
home = "^0.5.4"