[package]
name = "ceolmund"
version = "0.5.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.32"
image = "0.24"
rand = "0.8"
futures = "0.3"
tokio = { version = "1.34", features = ["full"] }
noop-waker = "0.1"
noise = "0.8"
rusty-xinput = "1.2"
unicode-segmentation = "1.10"
home = "0.5"
strum = "0.25"
strum_macros = "0.25"
crc64 = "2.0"